--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,60 @@
  *= require_self
  *= require_tree .
  */
+
+a {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
+html {
+  background-color: rgb(171, 171, 171);
+  font-family: 'helvetica', sans-serif;
+}
+
+h1 {
+  width: 200px;
+  padding: 50px 0 50px 0;
+  text-align: center;
+  margin: auto;
+  color: rgb(70, 130, 250);
+}
+
+section {
+  margin: auto;
+  width: 275px;
+  height: 75px;
+}
+
+/*hr {
+  height: 50px;
+}*/
+
+.menu-button {
+  background-color: rgb(160, 200, 200);
+  color: rgb(70, 130, 130);
+  text-align: center;
+  text-decoration: none;
+  padding: 10px 20px 10px 20px;
+  height: 20px;
+  border-radius: 20px;
+  box-shadow: 1px 1px 2px black;
+}
+
+.menu-button:hover {
+  transition: color 1.5s;
+  color: rgb(70, 130, 250);
+}
+
+.menu-button:active {
+  box-shadow: inset 1px 1px 2px black;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
