Makes nav bar on all pages. Authentication and registration implemented. Themes can be made, but updating is buggy.

--- a/app/views/games/show.html
+++ b/app/views/games/show.html
@@ -1,4 +1,4 @@
-<section class="game-attributes">
+<section class="game-attributes left">
   <h3>Theme: Cats</h3>
 
   <section class="players">
@@ -10,13 +10,12 @@
       <li>John</li>
     </ul>
   </section>
-  <br>
 
   <a href="/boards/1">My Board</a><br>
   <a href="/games">Back</a><br>
 </section>
 
-<section class="notifications">
+<section class="notifications right">
   <h3>Notifications</h3>
   <ul>
     <li>Game Begins 7/1/13</li>
