--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,26 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <!-- <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet"> -->
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+
 </head>
 <body>
+  <nav>
+    <ul class="group">
+      <li class="big-nav"><%= button_to "Games", games_url, method: "get"%></li>
+      <li class="big-nav"><%= button_to "Themes", themes_url, method: "get" %></li>
+      <li class="small-nav">
+        <form action="<%= session_url %>" method="post">
+          <input type="hidden" name="_method" value="delete">
+          <button type=submit><i class='icon-signout'></i></button>
+        </form>
+      </li>
+    </ul>
+  </nav>
 
 <%= yield %>
 
+<br><alert><%= flash[:alert] %></alert>
 </body>
 </html>
