--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,15 +12,72 @@
  *= require_tree .
  */
 
-a {
+html, body, header, footer, section, article, div,
+strong, a, img, p, h1, h2, h3, time, ul, li, small, form, input
+button, input[type="submit"], button[type="submit"]{
+  border: 0;
   padding: 0;
   margin: 0;
-  border: 0;
+  background-color: ;
+  text-decoration: none;
+  color: black;
+  box-shadow: 0;
 }
+
+.group:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 
 html {
   background-color: rgb(171, 171, 171);
   font-family: 'helvetica', sans-serif;
+}
+
+nav {
+  background-color: rgb(160, 200, 200);
+}
+
+nav > ul {
+  padding: 0;
+  list-style: none;
+  box-shadow: 0px 2px 10px black;
+}
+
+nav > ul > li {
+  float: left;
+}
+
+nav input, button {
+  width: 100%;
+  display: block;
+  font-size: 22px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
+  color: rgb(70, 130, 130);
+  background-color: rgb(160, 200, 200);
+  cursor: pointer;
+}
+
+nav input:hover, button:hover {
+  transition: color 1s;
+  color: rgb(70, 130, 250);
+}
+
+nav input:active, button:active {
+  box-shadow: inset 0px 2px 10px black;
+}
+
+.big-nav {
+  width: 39%;
+  border-right: 1px solid rgb(70, 130, 130);
+}
+
+.small-nav {
+  width: 19%;
 }
 
 h1 {
@@ -30,16 +87,12 @@ h1 {
   margin: auto;
   color: rgb(70, 130, 250);
 }
-
-section {
+/*
+#menu-buttons {
   margin: auto;
   width: 275px;
-  height: 75px;
+  height: 100px;
 }
-
-/*hr {
-  height: 50px;
-}*/
 
 .menu-button {
   background-color: rgb(160, 200, 200);
@@ -67,4 +120,6 @@ section {
 
 .right {
   float: right;
-}
+}*/
+
+
