--- a/app/views/games/new.html
+++ b/app/views/games/new.html
@@ -1,6 +1,7 @@
 <h1>New Game</h1>
 
 <form action="<%= games_url %>" method="post">
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
   <label for:"theme">Theme:</label>
   <select name="game[theme]">
