--- a/app/views/users/new.html
+++ b/app/views/users/new.html
@@ -11,8 +11,8 @@
   <input type="password" name="user[password_confirmation]" id="password_c">
   <br>
 
-  <input type="submit" value="Create Account">
+  <input class="menu-button" type="submit" value="Create Account">
   <br>
 </form>
 
-<a href="/session/new">Back</a>
+<a class="menu-button" href="/session/new">Back</a>
