--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -80,8 +80,7 @@ nav input:active, button:active {
   width: 19%;
 }
 
-h1 {
-  width: 200px;
+h1, h2 {
   padding: 50px 0 50px 0;
   text-align: center;
   margin: auto;
