--- a/app/views/themes/_form.html.erb
+++ b/app/views/themes/_form.html.erb
@@ -4,7 +4,7 @@
 <br><br>
 
 <!-- When implementing AJAX, add button to add 3 more fields -->
-<h3>Phrases</h3>
+<h3>Phrases (minimum 16)</h3>
 <ul id="phrase-list">
   <% 20.times do |i| %>
     <input name="theme[phrases_attributes][<%= i %>][body]" class="phrase-field" value="<%= theme.phrases[i] && @theme.phrases[i].body %>">
