--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -5,7 +5,13 @@
     <h3>Players:</h3>
     <ul>
     <% @game.users.each do |user| %>
-      <li><%= user.name.capitalize %></li>
+      <li>
+      <% if @game.end %>
+        <%= link_to user.name.capitalize, board_url(@game.boards.find_by_user_id(user.id)) %>
+      <% else %>
+        <%= user.name.capitalize %>
+      <% end %>
+      </li>
     <% end %>
     </ul>
   </section>
