--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,7 @@ button, input[type="submit"], button[type="submit"]{
   margin: 0;
   background-color: ;
   text-decoration: none;
+  text-align: center;
   color: black;
   box-shadow: 0;
 }
@@ -52,22 +53,26 @@ nav > ul > li {
 
 nav input, button {
   width: 100%;
-  display: block;
   font-size: 22px;
   padding-top: 10px;
   padding-bottom: 10px;
-  text-align: center;
-  color: rgb(70, 130, 130);
   background-color: rgb(160, 200, 200);
   cursor: pointer;
 }
 
-nav input:hover, button:hover {
+input {
+  display: block;
+  text-align: center;
+  color: rgb(70, 130, 130);
+
+}
+
+input:hover, button:hover {
   transition: color 1s;
   color: rgb(70, 130, 250);
 }
 
-nav input:active, button:active {
+input:active, button:active {
   box-shadow: inset 0px 2px 10px black;
 }
 
@@ -86,39 +91,69 @@ h1, h2 {
   margin: auto;
   color: rgb(70, 130, 250);
 }
-/*
-#menu-buttons {
+
+
+#grid {
   margin: auto;
-  width: 275px;
-  height: 100px;
+  border: 1px solid black;
+  width: 800px;
+  background-color: white;
 }
 
-.menu-button {
-  background-color: rgb(160, 200, 200);
-  color: rgb(70, 130, 130);
+cell {
+  float: left;
+  width: 198px;
+  height: 198px;
+  border: 1px solid black;
   text-align: center;
-  text-decoration: none;
-  padding: 10px 20px 10px 20px;
-  height: 20px;
-  border-radius: 20px;
-  box-shadow: 1px 1px 2px black;
+  font-size: 20pt;
 }
 
-.menu-button:hover {
-  transition: color 1.5s;
-  color: rgb(70, 130, 250);
+.game-attributes input[type="submit"] {
+  background-color: rgb(160, 200, 200);
+  padding: 10px;
+  border: 1px solid black;
+  box-shadow: 1px 1px 1px black;
+  border-radius: 5px;
+  margin: auto;
 }
 
-.menu-button:active {
-  box-shadow: inset 1px 1px 2px black;
+h3 {
+  padding: 20px 0 20px 0;
 }
 
 .left {
   float: left;
+  padding-left: 20px;
 }
 
 .right {
   float: right;
-}*/
+  padding-right: 20px;
+}
 
+ul {
+  list-style: none;
+}
 
+.players {
+  padding-bottom: 20px;
+}
+
+.players li {
+  text-align: left;
+}
+
+.notifications {
+  width: 500px;
+}
+
+notice {
+  display: block;
+  float: left;
+}
+
+time {
+  display: block;
+  float: right;
+}
