--- a/app/views/cells/show.html.erb
+++ b/app/views/cells/show.html.erb
@@ -33,6 +33,9 @@
   <%= image_tag @photo.img.url(:big) %>
 
   <% else %>
+  <% unless @cell.board.game.pending_votes(current_user).empty? %>
+    <alert>You cannot submit a photo until you have voted on all pending photos!</alert>
+  <% end %>
     <form action="<%= photos_url %>" method="post" enctype="multipart/form-data">
       <input type="hidden" name="authenticity_token"
         value="<%= form_authenticity_token %>">
