--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -4,7 +4,8 @@
 
 <% Theme.all.each do |theme| %>
  <%= link_to theme.name, edit_theme_url(theme) %>
- <%= button_to "Delete", theme_url(theme), method: "delete" %>
+ <%= button_to "Delete", theme_url(theme), method: "delete",
+    data: { confirm: "Are you sure you wish to discard this theme?\nThis is permanent!"}%><br>
 <% end %>
 
 <a href="/">Main Menu</a>
