--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -8,5 +8,5 @@
     data: { confirm: "Are you sure you wish to discard this theme?\nThis is permanent!"}%><br>
 <% end %>
 
-<a href="/">Main Menu</a>
-<a href="/themes/new">New Theme</a>
+<a href="/" class="button">Main Menu</a>
+<a href="/themes/new" class="button">New Theme</a>
