--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -11,6 +11,7 @@
   <br>
 <% end %>
 
-
-<a href="/">Main Menu</a>
-<a href="/games/new">New Game</a>
+<div class="buttons">
+  <a href="/" class="button">Main Menu</a>
+  <a href="/games/new" class="button">New Game</a>
+</div>
