--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <li class="small-nav">
         <form action="<%= destroy_user_session_url %>" method="post">
           <input type="hidden" name="_method" value="delete">
-          <button type=submit><i class='icon-signout'></i></button>
+          <button type="submit"><i class='icon-signout'></i></button>
         </form>
       </li>
     </ul>
