--- a/app/views/themes/new.html.erb
+++ b/app/views/themes/new.html.erb
@@ -2,5 +2,5 @@
 
 <form action="<%= themes_url %>" method="post">
   <%= render partial: "form", locals: {theme: @theme} %>
-  <input type=submit value="Create Theme">
+  <input type=submit value="Create Theme" class="button">
 </form>
