--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -64,28 +64,27 @@ nav > ul > li {
   float: left;
 }
 
-nav input, button {
+nav input, nav button, nav .button {
   width: 100%;
+}
+
+ nav input, button, buttons .button {
+  /*display: block;*/
+  text-align: center;
+  color: rgb(70, 130, 130);
+  background-color: rgb(160, 200, 200);
+  cursor: pointer;
   font-size: 22px;
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: rgb(160, 200, 200);
-  cursor: pointer;
 }
 
- nav input {
-  display: block;
-  text-align: center;
-  color: rgb(70, 130, 130);
-
-}
-
- nav input:hover, button:hover {
+ nav input:hover, button:hover, .button:hover {
   transition: color 1s;
   color: rgb(70, 130, 250);
 }
 
- nav input:active, button:active {
+ nav input:active, button:active, .button:active {
   box-shadow: inset 0px 2px 10px black;
 }
 
@@ -105,6 +104,9 @@ h1, h2 {
   color: rgb(70, 130, 250);
 }
 
+.buttons {
+  padding: 20px;
+}
 
 #grid {
   margin: auto;
