--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -3,15 +3,17 @@
 <% unless @game.pending_votes(current_user).blank? %>
   <alert>You cannot submit a photo until you have voted on all pending photos!</alert>
 <% end %>
-<br>
-<%= link_to "Back to Game", game_url(@board.game), class: "button" %>
-<br>
 
-<section id="grid">
+<div class="group buttons">
+  <%= link_to "Back to Game", game_url(@board.game), class: "button" %>
+</div>
+
+
+<section id="grid" class="group">
   <% Board::CARDINAL.times do |i| %>
     <row class="group">
     <% Board::CARDINAL.times do |j| %>
-      <% if @board.game.pending_votes(current_user).blank? %>
+      <% if @game.pending_votes(current_user).blank? %>
         <a href="<%= cell_url(@board.cell_at(i,j))  %>">
           <cell><%= display_at(@board,i,j) %></cell></a>
       <% else %>
