--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -125,6 +125,7 @@ cell {
   border: 1px solid black;
   text-align: center;
   font-size: 20pt;
+  position: relative;
 }
 
 .button {
@@ -174,4 +175,23 @@ notice {
 time {
   display: block;
   float: right;
+}
+
+status-marker {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  left: 0;
+}
+
+#grid .green {
+  background-color: green;
+}
+
+#grid .yellow {
+  background-color: yellow;
+}
+
+#grid .red {
+  background-color: red;
 }
