--- a/app/views/themes/edit.html.erb
+++ b/app/views/themes/edit.html.erb
@@ -4,5 +4,5 @@
   <input type="hidden" name="_method" value="put">
   <input type="hidden" name="theme[id]" value="<%= @theme.id %>">
   <%= render partial: "form", locals: {theme: @theme} %>
-  <input type=submit value="Update Theme">
+  <input type=submit value="Update Theme" class="button">
 </form>
