--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
 <body>
   <nav>
     <ul class="group">
-      <li class="big-nav"><%= button_to "Games", games_url, method: "get"%></li>
-      <li class="big-nav"><%= button_to "Themes", themes_url, method: "get" %></li>
+      <li class="big-nav"><%= link_to "Games", games_url, method: "get", class: "button"%></li>
+      <li class="big-nav"><%= link_to "Themes", themes_url, method: "get", class: "button" %></li>
       <li class="small-nav">
         <form action="<%= destroy_user_session_url %>" method="post">
           <input type="hidden" name="_method" value="delete">
