--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -6,7 +6,7 @@
   <% Theme.all.each do |theme| %>
     <li>
       <%= link_to theme.name, edit_theme_url(theme) %>
-      <%= button_to "Delete", theme_url(theme), method: "delete",
+      <%= button_to "Delete", theme_url(theme), method: "delete", class: "button",
         data: { confirm: "Are you sure you wish to discard this theme?\nThis is permanent!"}%>
     </li>
   <% end %>
