--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,7 +54,7 @@ main {
 }
 
 nav {
-  background-color: rgb(160, 200, 200);
+
 }
 
 nav > ul {
@@ -62,6 +62,9 @@ nav > ul {
   list-style: none;
   box-shadow: 0px 2px 10px black;
   display: block;
+  width: 920px;
+  margin: auto;
+  background-color: rgb(160, 200, 200);
 }
 
 nav > ul > li {
@@ -145,11 +148,12 @@ cell {
 
 nav .button {
   padding: 10px 0 10px 0;
-  /*width: 100%;*/
+  width: 100%;
   border-radius: 0;
   border: 0;
   box-shadow: 0 0 0;
   display: block;
+  margin: auto;
 }
 
 nav a {
