Added button for more phrase fields

--- a/app/views/themes/_form.html.erb
+++ b/app/views/themes/_form.html.erb
@@ -5,6 +5,7 @@
 
 <!-- When implementing AJAX, add button to add 3 more fields -->
 <h3>Phrases (minimum 16)</h3>
+<button id="more-phrases" class="button">Add More Phrases</button>
 <ul id="phrase-list" class="group">
   <% phrase_num.times do |i| %>
     <%= render partial: "phrase_field", locals: { id: theme.phrases[i] && theme.phrases[i].id,
@@ -12,6 +13,7 @@
                                                   index: i} %>
   <% end %>
 </ul>
+
 
 
 <%= link_to "Back", themes_url, class: "button" %>
