--- a/app/views/themes/_phrase_field.html.erb
+++ b/app/views/themes/_phrase_field.html.erb
@@ -3,5 +3,5 @@
     class="phrase-field"
     value="<%= body %>">
   <input type="hidden" name="theme[phrases_attributes][<%= index %>][id]"
-    value="<%= id %>">
+    class="primary-key" value="<%= id %>">
 </li>
