--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,6 @@ button, nav input[type="submit"] {
   border: 0;
   padding: 0;
   margin: 0;
-  background-color: ;
   text-decoration: none;
   color: black;
   box-shadow: 0;
@@ -46,15 +45,11 @@ html {
 }
 
 main {
-  background-color: rgb(160, 200, 200);
+  background-color: rgb(190, 200, 200);
   width: 900px;
   margin: 20px auto;
   padding: 10px;
   border: 1px solid black;
-}
-
-nav {
-
 }
 
 nav > ul {
@@ -76,6 +71,14 @@ nav input, nav button, nav .button {
   width: 100%;
 }
 
+.button {
+  background-color: rgb(160, 200, 200);
+  padding: 10px;
+  border: 1px solid black;
+  box-shadow: 1px 1px 1px black;
+  border-radius: 5px;
+  font-size: 12pt;
+}
 
 .button:hover {
   transition: all 0.5s;
@@ -84,8 +87,16 @@ nav input, nav button, nav .button {
   cursor: pointer;
 }
 
+.small-button:hover a {
+  color: rgb(70, 130, 250);
+}
+
 .button:active {
   box-shadow: inset 0px 2px 10px black;
+}
+
+.small-button {
+  padding: 2px 10px 2px 10px;
 }
 
 .big-nav {
@@ -123,16 +134,6 @@ cell {
   text-align: center;
   font-size: 20pt;
   position: relative;
-}
-
-.button {
-  background-color: rgb(160, 200, 200);
-  padding: 10px;
-  border: 1px solid black;
-  box-shadow: 1px 1px 1px black;
-  border-radius: 5px;
-  /*margin: auto;*/
-  font-size: 12pt;
 }
 
 nav .button {
@@ -210,4 +211,8 @@ status-marker {
 
 #phrase-list li {
   float: left;
+}
+
+.pending {
+  color: red;
 }
