--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -2,11 +2,11 @@
 
 <!-- Later, restrict themes to their owners -->
 <section class="themes">
-  <ul>
+  <ul class="group">
   <% current_user.themes.each do |theme| %>
-    <li>
+    <li class="left button small-button">
       <%= link_to theme.name, edit_theme_url(theme) %>
-      <%= button_to "Delete", theme_url(theme), method: "delete", class: "button",
+      <%= button_to "Delete", theme_url(theme), method: "delete", class: "left button small-button",
         data: { confirm: "Are you sure you wish to discard this theme?\nThis is permanent!"}%>
     </li>
   <% end %>
