Describes Guest log-in info

--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -1,4 +1,7 @@
 <h1>Photo Bingo</h1>
 <h2>Logged in as: <%= current_user.name %></h2>
+<h3> Guest Login:</h3>
+Email: guest@guest.com
+Password: password
 
 Insert well-written tutorial here.
