--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -71,6 +71,14 @@ nav input, nav button, nav .button {
   width: 100%;
 }
 
+#guest-info {
+  margin: auto;
+  width: 150px;
+  border: 2px dotted black;
+  padding: 5px;
+  postion: block;
+}
+
 .button {
   background-color: rgb(160, 200, 200);
   padding: 10px;
