--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,4 +1,5 @@
 <h1>My Board</h1>
+<h4>Click on a cell to upload a photo matching that phrase.</h4>
 
 <% unless @game.pending_votes(current_user).blank? %>
   <alert>You cannot submit a photo until you have voted on all pending photos!</alert>
