Pinging set-up, guest login clarified further

--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -14,3 +14,5 @@ of the corresponding cars, and upload them to the database. A picture must be
 (for example) Lamborghini, rather than one of a Ford. This is done by vote.
 When a player gets 4 approved pictures in a row, column, or diagonal, he is
 declared the winner, and all boards become available to all players for perusal.
+
+Click "Games" at the top to begin!
