Adds line break

--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -13,6 +13,6 @@ of the corresponding cars, and upload them to the database. A picture must be
 “approved” by the other players, to verify that it is, indeed, a picture of a
 (for example) Lamborghini, rather than one of a Ford. This is done by vote.
 When a player gets 4 approved pictures in a row, column, or diagonal, he is
-declared the winner, and all boards become available to all players for perusal.
+declared the winner, and all boards become available to all players for perusal. <br><br>
 
 Click "Games" at the top to begin!
